--- a/chat.html
+++ b/chat.html
@@ -84,10 +84,10 @@
           </div>
         </div>
         <div class="flex">
-          <div class="chat-users h-full divide-y border overflow-y-auto flex-shrink-0 hidden sm:flex flex-col"
+          <div class="chat-users h-full divide-y border overflow-x-hidden overflow-y-auto flex-shrink-0 hidden sm:flex flex-col"
             style="width: 300px; height: calc(100vh - 160px);">
           </div>
-          <div class="chat-users chat-mobile h-full divide-y overflow-x-hidden border overflow-y-auto flex-shrink-0 hidden flex-col"
+          <div class="chat-users chat-mobile h-full divide-y overflow-x-hidden border sm:hidden overflow-y-auto flex-shrink-0 hidden flex-col"
             style="width: 100%; height: calc(100vh - 90px);">
           </div>
           <div class="w-full relative chat-view">
