--- a/chat.html
+++ b/chat.html
@@ -99,7 +99,7 @@
             </div>
           </div>
           <div class="flex">
-            <div class="chat-users h-full divide-y border overflow-y-auto flex-shrink-0 hidden sm:flex flex-col"
+            <div class="chat-users h-full overflow-x-hidden divide-y border overflow-y-auto flex-shrink-0 hidden sm:flex flex-col"
               style="width: 300px; height: calc(100vh - 160px);">
             </div>
             <div
