--- a/chat.html
+++ b/chat.html
@@ -72,7 +72,7 @@
     </div>
   </header>
 
-  <main class="flex xl:mx-auto md:px-6 bg-white lg:py-0 min-h-screen">
+  <main class="flex xl:mx-auto md:pl-7  bg-white lg:py-0 min-h-screen">
     <div
       class="lg:px-20 hidden sm:flex sm:w-5/12 md:w-4/12 divide-y-2 mt-15 justify-center items-center flex-col gap-10 overflow-y-auto">
       <div class="sidebar bottom-0 fixed flex h-3/4 justify-center mt-32 mb-20 overflow-y-auto top-0 ">
@@ -90,8 +90,8 @@
     </div>
     <div class="w-full sm:w-8/12 min-h-screen ">
       <div class="w-full sm:w-full">
-        <div class="flex flex-col h-full list-container overflow-y-auto bg-white mx-auto ">
-          <div class="bg-white h-20"></div>
+        <div class="pt-5 px-10 flex flex-col h-full list-container overflow-y-auto bg-white mx-auto " >
+          <div class="bg-white h-24"></div>
           <div class="sm:flex flex-col bg-white divide-y hidden">
             <div class="cursor-pointer gap-3 flex py-4 px-3">
               <img src="assets/images/icons/angle_left.svg" alt="back icon" />
